# local-llm-extraction-bench

./: .gitignore  README.md  benchmark_extraction.py  catalogue.json  enrich_bike.py  expected.json  pyproject.toml  requirements.txt  samplestest_orbea.json
bike_agent/: __init__.py  cli.py  config.py  http_client.py  identity.py  lbc.py  pages.py  pipeline.py  ranking.py  search.py  synth.py
data/: annonces.json  expected.json
