[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-ia-agent"
version = "0.1.0"
description = "Local-LLM agent for enriching Leboncoin bike ads (extraction, web search via Jina, LBC comparables, market synthesis)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "lbc>=1.1.2",
]

[project.scripts]
bike-ia-agent = "enrich_bike:main"

[tool.setuptools]
py-modules = ["enrich_bike", "benchmark_extraction"]
